css/style.css
@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Quattrocento&display=swap');

@keyframes GontobezIn {
    0%{transform: translateY(300pt) scale(0.5);}
    50%{transform: translateY(300pt) scale(1.5);}
    100%{transform: translateY(0pt) scale(1);}
}

@keyframes ButtonEntrance {
    0% {
        transform: scale(0.5);
    }
    75% {
        transform: scale(1.05);
    }
    100% {
        transform: scale(1);
    }
}

@keyframes appear_buttons {
    0%,70%{opacity: 0;}
    100%{opacity: 100;}
}

@keyframes TranslateGreeting {
    0% {transform: translateY(50pt);}
    70% {transform: translateY(10pt);}
    100% {transform: translateY(20pt);}
}

@keyframes appear_greeting {
    0% {opacity: 0;}
    70%,100%{opacity: 100;}
}

@keyframes appear {
    from{opacity: 0%;}
    to{opacity: 100%;}
}

h1.animate_title {
    font-family: Oswald, sans-serif;
    text-align: center;
    font-size: 40pt;
    color: #689d6a;
    float: center;
    animation: GontobezIn 2s, appear 1s;
}

h2.animate_title {
    font-family: Oswald, sans-serif;
    text-align: center;
    font-size: 40;
    color: #689d6a;
    float: center;
    animation: GontobezIn 2s, appear 1s;
}

h1.appear_title {
    font-family: Oswald, sans-serif;
    text-align: center;
    font-size: 40pt;
    color: #689d6a;
    float: center;
    animation: appear 1s;
}

div.row_heading {
    font-family: Oswald, sans-serif;
    text-align: center;
    font-size: 30pt;
    color: #838598;
    float: center;
    animation: appear_buttons 3s, ButtonEntrance 1s 2s;
    transition: transform .2s;
}

p#greeting {
    color: #bdae93;
    text-align: center;
    font-size: 20pt;
    opacity: 0;
    transform: translateY(50pt);
    animation: appear_greeting 1s 2s forwards, TranslateGreeting 1s 2s forwards;
}

div#div_navig {
    text-align: center;
    transform: translateY(50pt);
}

a {
    text-decoration: none;
    color: #458588;
}

div #first_row,#second_row,#third_row,#forth_row,#fifth_row,#sixth_row {
    padding: 10pt;
}

div.button_text {
    color: #d5c4a1;
}

ul {
    list-style: none;
}

li {
    display: inline;
    padding: 10pt;
}

button {
    width: 280pt;
    height: 100pt;
    border-radius: 10pt;
    background-color: #282828;
    color: #d5c4a1;
    text-align: center;
    text-decoration: none;
    border: solid;
    border-color: #689d6a;
    animation: appear_buttons 3s, ButtonEntrance 1s 2s;
    transition: transform .2s;
}

img {
    width: 45%;
    border-radius: 10px;
    animation: appear_buttons 3s, ButtonEntrance 1s 2s;
    transition: transform .2s;
}

/* button#PhotoPort { */
/*     width: 585pt; */
/*     height: 100pt; */
/*     border-radius: 10pt; */
/*     padding: 10pt; */
/*     background-color: #282828; */
/*     color: #d5c4a1; */
/*     text-align: center; */
/*     text-decoration: none; */
/*     border: solid; */
/*     border-color: #689d6a; */
/*     animation: appear_buttons 3s, ButtonEntrance 1s 2s; */
/*     transition: transform .2s; */
/* } */

button:hover {
    transform: scale(1.07);
    border-color: #8ec07c;
    background-color: #32302f;
    color: #ebdbb2;
}

/* button#PhotoPort:hover { */
/*     transform: scale(1.07); */
/*     border-color: #8ec07c; */
/*     background-color: #32302f; */
/*     color: #ebdbb2; */
/* } */

button:hover i {
    color: #d3869b;
}

i {
    float: left;
    transform: translateX(10pt);
    color: #b16286;
}

p.button_title {
    float: left;
    scale: 2.5;
    transform: translateX(25pt) translateY(-5pt);
}

/* p.port_button_title { */
/*     float: left; */
/*     scale: 2.5; */
/*     transform: translateX(50pt) translateY(-5pt); */
/* } */

p.button_description {
    float: top;
    transform: translateX(30pt) translateY(25pt);
    text-align: left;
    color: #bdae93;
    scale: 1.25;
}

p.neuro_button_description {
    float: top;
    transform: translateY(20pt);
    text-align: left;
    color: #bdae93;
    scale: 1.25;
}

p.photo_button_description {
    float: top;
    transform: translateX(10pt) translateY(25pt);
    text-align: left;
    color: #bdae93;
    scale: 1.25;
}

p.button_descriptio {
    float: top;
    transform: translateX(-5pt) translateY(25pt);
    text-align: left;
    scale: 1.25;
}

body {
    background-color: #282828;
    overflow-x: hidden;
}

p {
    font-family: Quattrocento, sans-serif;
}

